# voicechat_solana

./: Anchor.toml  REALLOCATION_GUIDE.md  TESTING_GUIDE.md  button-demo.html  package-lock.json  reallocation-example.js  simple-voice-test.js  smart-contract-caller.js  storage_manager_keypair.json  test-deployed-voice-chat.js  voice-chat-test.js  voice_chat_demo.html  voice_chat_manager_keypair.json
programs/storage_manager/: Cargo.toml
programs/storage_manager/src/: lib.rs
programs/voice_chat_manager/: Cargo.toml
programs/voice_chat_manager/src/: lib.rs
programs/voicechat/: Cargo.toml
programs/voicechat/src/: lib.rs
tests/: voice_chat_system.ts  voicechat.ts
