[package]
name = "storage_manager"
version = "0.1.0"
description = "Voice Chat Storage Manager - Creates 10x30KB PDAs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "storage_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
